# PowerPlay

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
powerplay/: manage.py
powerplay/app/: context_processors.py  forms.py  models.py  views.py  views_demos.py  views_guestbook.py
powerplay/app/migrations/: 0001_initial.py
powerplay/app/static/css/: base.css  blue_body.css
powerplay/app/static/js/: active_tab.js  bridgeform.js  charlimit.js  musicplayer.js  stimulus-strada.js  turbo.es2017-umd.js
powerplay/app/templates/: base.html  game_detail.html  game_edit.html  game_list.html  guestbook.html  home.html  infinite_scroller.html  sse_demo.html
powerplay/app/templates/partials/: edit_title.html  guestbook_frame.html  infinite_scroll.html  music_player.html  scroll_frame.html  systems_gb.html  systems_gbc.html  systems_gbp.html
powerplay/app/templates/samples/: add_stylesheet.html
powerplay/app/templates/streams/: guestbook_entry.html  guestbook_entry_counter.html  guestbook_entry_remove.html
powerplay/app/templatetags/: demotags.py
powerplay/powerplay/: asgi.py  settings.py  urls.py  wsgi.py
